--- a/src/generate_plone_addon/template_theme/src/{{namespace}}/{{module}}/theme/manifest.cfg
+++ b/src/generate_plone_addon/template_theme/src/{{namespace}}/{{module}}/theme/manifest.cfg
@@ -12,7 +12,7 @@ disabled-bundles =
 production-css = ++theme++main-theme/styles/theme.min.css
 tinymce-content-css = /++theme++main-theme/styles/theme.min.css
 
-# production-js = ++theme++main-theme/js/theme-compiled.js
+production-js = ++theme++main-theme/js/theme.js
 
 #[theme:overrides]
 #directory = template-overrides
